# OpenGL-Examples

./: README.md
Dependencies/glfw/lib/pkgconfig/: glfw3.pc
Dependencies/glm/lib/pkgconfig/: glm.pc
Ders3/: CMakeLists.txt
Ders3/include/: kutuphane.hpp
Ders3/src/: glad.c  kutuphane.cpp  main.cpp
Triangle/: CMakeLists.txt
Triangle/include/: shaderprogram.hpp
Triangle/include/glad/: glad.h
Triangle/shaders/: simpelfs.glsl  simplevs.glsl
Triangle/src/: main.cpp  shaderprogram.cpp
Trianglebuild/: CMakeCache.txt  Makefile  cmake_install.cmake
buildDers4/: CMakeCache.txt  Makefile  cmake_install.cmake
